# docs/v2/openapi.yaml
@@ -349,6 +349,10 @@ paths:
       responses:
         "302":
           description: Redirect to client
+          headers:
+            Location:
+              schema:
+                type: string
   /auth/twitch/token:
     get:
       summary: Obtain Twitch access token
